Added part of framework